first integrate kafka (2)